# pilotty

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  RECORDING_FEATURE_PLAN.md
.github/workflows/: ci.yml  release.yml
crates/pilotty-cli/: Cargo.toml
crates/pilotty-cli/src/: args.rs  main.rs
crates/pilotty-cli/src/daemon/: client.rs  mod.rs  paths.rs  pty.rs  retention.rs  server.rs  session.rs  terminal.rs  tombstone.rs  transport.rs
crates/pilotty-core/: Cargo.toml
crates/pilotty-core/src/: error.rs  input.rs  lib.rs  protocol.rs  refs.rs  region.rs  snapshot.rs
crates/pilotty-core/src/elements/: classify.rs  grid.rs  mod.rs  segment.rs  style.rs
npm/: .npmignore  README.md  package.json
scripts/: version-sync.sh
skills/pilotty/: SKILL.md
skills/pilotty/references/: key-input.md  region-refs.md  session-management.md
skills/pilotty/templates/: dialog-interaction.sh
