[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.6"
edition = "2021"
license = "MIT"
authors = ["Matt Simpson"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY
portable-pty = "0.9"

# Terminal emulation
termwiz = "0.23"
vt100 = "0.16"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
unicode-width = "0.2"

# System
libc = "0.2"
dirs = "5"
